<resources>
    <string name="app_name">SpiceZilla</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="favorite_restaurants">Favorite Restaurants</string>
    <string name="order_history">Order History</string>
    <string name="faq">FAQ</string>
    <string name="preference_file">Food_preference</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="restaurant_name">RestaurantName</string>
    <string name="name">Name</string>
    <string name="phonenumber">PhoneNumber</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="profilephone">Profilephone</string>
    <string name="ans_one">Ans_one</string>
    <string name="answer_two">answer_two</string>
    <string name="answer_three">answer_three</string>
    <string name="answer_four">Answer_four</string>
    <string name="answer_five">Answer_five</string>
    <string name="answer_six">Answer_six</string>
    <string name="date">Date</string>
    <string name="previous_orders">Your Previous Orders are Listed below:</string>
    <string name="no_orders">No_orders</string>
    <string name="proceed_to_cart">Proceed to Cart</string>
    <string name="restaurantname">RestaurantName</string>
    <string name="your_order_has_been_palced">Your order has been palced</string>
    <string name="no_favorites">No favorites</string>
    <string name="filter">Filter</string>

</resources>