<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ProfileFragment"
    android:background="@color/yellow">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:padding="4dp">
        <ImageView
            android:id="@+id/profileImg"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:scaleType="fitXY"
            android:src="@drawable/profileimg"/>
        <LinearLayout
            android:id="@+id/linearProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profileImg"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:padding="4dp">

            <TextView
                android:id="@+id/profileuserName"
                android:layout_width="360dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:textSize="20sp"
                android:layout_marginLeft="8dp"
                android:text="@string/name"
                android:background="@color/white"
                android:textAlignment="center"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/Profilephone"
                android:layout_width="360dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:layout_marginLeft="8dp"
                android:textSize="20sp"
                android:text="@string/profilephone"
                android:background="@color/white"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/profileEmail"
                android:layout_width="360dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:layout_marginLeft="8dp"
                android:text="@string/email"
                android:textSize="20sp"
                android:background="@color/white"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"/>
            />
            <TextView
                android:id="@+id/profileAddress"
                android:layout_width="360dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:textSize="20sp"
                android:layout_marginLeft="8dp"
                android:text="@string/address"
                android:background="@color/white"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"/>
            />
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>